[package]
name = "syslogrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8.11", features = ["net", "os-poll"] }
socket2 = "0.5.6"
chrono = "0.4.35"
toml = "0.8.12"
serde = "1.0.197"
serde_derive = "1.0.197"
anyhow = "1.0.81"
flate2 = "1.0"
